src/test/deca/syntax/invalid/float_trop_long.deca
{

float f = 100000000000000000000000000000000000000000000000000000.00000;

}